<resources>
    <string name="app_name">TravelLogger</string>

    <string name="action_settings">Settings</string>

    <string name="title_label">Title</string>
    <string name="title_hint">Enter a Trip Title</string>
    <string name="locations">Start and End Locations</string>
    <string name="start_location_hint">Enter Start Location Address</string>>
    <string name="end_location_hint">Enter End Location Address</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="maps">Maps</string>
    <string name="create_map">Show Map</string>
    <string name="trips">Trips</string>
    <string name="start_date_picker_title">Start Date:</string>
    <string name="end_date_picker_title">End Date:</string>
    <string name="new_trip">New Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="start_date_detail">Date Started:</string>
    <string name="end_date_detail">Date Ended:</string>
    <string name="total_days_detail">Total Days:</string>
    <string name="total_distance_detail">Total Distance:</string>
    <string name="details">Details</string>
    <string name="view_details">View Details</string>

    <string name="date_information">Date Information</string>
    <string name="maps_details">Map/Details</string>
</resources>
