<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10sp"
            android:paddingTop="5sp"
            android:paddingLeft="10sp"
            android:text="@string/start_date_detail"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/start_date_detailTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:paddingTop="5sp"
            android:text="@string/end_date_detail"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/end_date_detailTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10sp"
            android:paddingTop="5sp"
            android:paddingLeft="10sp"
            android:text="@string/total_days_detail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_days_detailTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10sp"
            android:paddingTop="5sp"
            android:paddingLeft="10sp"
            android:text="@string/total_distance_detail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_distance_detailTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />

    </TableRow>

</TableLayout>
